# pokedex

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  LICENSE.md  README.md  flake.nix  install.sh  justfile  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cachix.yml  cd.yml  check.yml  ci-nix.yml  ci.yml  lint.yml  release-assets.yml  release.yml  test.yml
.sqlx/: query-1efe8a01199a64fbc5eda58a515fdee7b29f441c458877213029d1415d377d28.json  query-2ac70fc546ce442b0e3d27575ee3e8be337c4c03d9ab0ac450696a4229d8da7b.json  query-38555c75b1464a7052c844f701e9e98fc1f49e5347a2e3e8790b3a2402a1e8ff.json  query-3a76b7a2a9b0bff2b8408b8f1f7d53e6224db8300275d731c2cb2d38fa342e5b.json  query-3cabfeb6106d07c78eae79fab56965e1897bb755ae061387d628340aa3fd9226.json  query-3e60f7e77c3b1b1c0292125af65f946439f205d40181864deb879c83b857e668.json  query-4127156f3f1c6644bea6aa7d687cbbb29c05c92c486cdde9219a7bf1266a639e.json  query-425a8a189f379fbf64663ddeb2cab4b4f6fa5c2c2520882da6a64fde80a690ec.json  query-47e4d08b15165c9334e116a003f52ae9878d8512e0eb80ea275ac3741b628763.json  query-503f01585b64012f5cc65a9d8fd28e0fdbde0bae5dde48e1d4b6f71f904cfad5.json  query-50ed7345ccb07a5f83fe150e7ee55578bba40e511ca4ab67ec87326f37b4b738.json  query-5378b35d6333d71ceae475d9a9eef7ffc1b532ac727d08f32c33fd5d183978ce.json  query-6cd0d4c0a8243e6a7ffb11e0c52830f817802bbe8ba72fe79021e2b2e16c1241.json  query-7a0f9c24ceecdb72268834068ec2e0eb5b73f9e937f9a83ebe4c872f9221edf5.json  query-896b61aef89a68d07108b631df0411aeb99617fe0b3ccb6253e0858f76fffdbf.json  query-99fa49b51debbdbc9938848fda4a4c8abf44aeb30a787e8dca84d1b288bec16e.json  query-a3d331e140590ad0bdf9ad4230cbf27b55d08bd7f1cfd9a5c2f73e08943d72f8.json  query-a59f5166a18feec099a689b2a61cbd14c5dca7ac23761535e65e4c74fcf8d536.json  query-c70e92d3f8c88121ee3191cf2396a33f6f5e99407f2436dc8f7f3c0269795f4f.json  query-d5454d23c41a6e66b959ceeebb9da6129c4ca35db7c084fcbbe26c464f1d651b.json  query-e78244f0c6fb79f9ad071551ed96b62be1ea4ce19726f3fff8acebed85abe7ab.json  query-eb92f29a6e050b51022a0474f89fedb260fa1aaade49c425041be49d5631d2a4.json
data/: database.sh  download.sh  download_assets.sh  generate.sh  pokedex.sql  pokedex.sqlite
data/csv/: pokemon.csv  pokemon_descriptions.csv  pokemon_genders.csv  pokemon_sizes.csv  pokemon_types.csv  versions.csv
docs/: component.pu
lib/database/: Cargo.toml  expanded.rs
lib/database/src/: database.rs  file.rs  lib.rs  mapper.rs  tables.rs
lib/image-cache/: Cargo.toml
lib/image-cache/src/: lib.rs
lib/pokemon/: Cargo.toml
lib/pokemon/src/: attributes.rs  cry.rs  description.rs  image.rs  lib.rs  pokemon.rs  stats.rs  types.rs
lib/settings/: Cargo.toml
lib/settings/src/: lib.rs
lib/string/: Cargo.toml
lib/string/src/: lib.rs
lib/ui-core/: Cargo.toml
lib/ui-core/src/: event.rs  lib.rs  repository.rs  state.rs
lib/ui-core/src/components/: attributes_box.rs  image_box.rs  mod.rs  pokemon_table.rs  sound.rs  stat_chart.rs  text_box.rs  types_box.rs
lib/ui-core/src/pages/: detail.rs  list.rs
lib/ui-shell/: Cargo.toml
lib/ui-shell/src/: app.rs  event.rs  lib.rs  palette.rs  state.rs  tui.rs
lib/ui-shell/src/components/: attributes_box.rs  image_box.rs  input_box.rs  mod.rs  pokemon_table.rs  sound.rs  stat_chart.rs  text_box.rs  types_box.rs
lib/ui-shell/src/pages/: detail.rs  list.rs  mod.rs  page.rs
nix/: devshell.nix  packages.nix  pre-commit.nix  rust.nix
nix/modules/: devshell.nix  pre-commit.nix  rust.nix
src/: main.rs
src/core/: mod.rs  pokemon.rs
src/core/ui/: event.rs  mod.rs  repository.rs  state.rs  string.rs
src/core/ui/components/: attributes_box.rs  image_box.rs  input_box.rs  max_chart.rs  metadata_box.rs  mod.rs  pokemon_table.rs  sound.rs  text_box.rs  text_image.rs  types_box.rs
src/core/ui/pages/: detail.rs  list.rs  mod.rs  page.rs
src/infrastructure/: database.rs  mod.rs  tui.rs
src/infrastructure/tui/: app.rs  mod.rs  run.rs  tui.rs
src/infrastructure/tui/components/: pokemon_table.rs
src/infrastructure/tui/pages/: list.rs  mod.rs  page.rs
src/infrastructure/tui/widgets/: input_box.rs  mod.rs
src/infrastructure/ui/: app.rs  mod.rs  tui.rs
src/infrastructure/ui/components/: component.rs  input_box.rs  pokemon_table.rs
src/infrastructure/ui/pages/: list.rs  mod.rs  page.rs
src/shell/: database.rs  file.rs  mod.rs  pokemon.rs
src/shell/database/: database.rs  mapper.rs  tables.rs
src/shell/database/tables/: mod.rs  pokemon.rs  types.rs
src/shell/ratatui/: app.rs  event.rs  mod.rs  palette.rs  tui.rs
src/shell/ratatui/components/: attributes_box.rs  component.rs  image_box.rs  input_box.rs  metadata_box.rs  mod.rs  pokemon_table.rs  sound.rs  stat_chart.rs  text_box.rs  text_image.rs  types_box.rs
src/shell/ratatui/pages/: detail.rs  list.rs  mod.rs  page.rs
src/shell/repositories/: pokedex.rs
src/shell/sql/: database.rs  file.rs  mapper.rs  mod.rs  tables.rs
src/shell/ui/: app.rs  event.rs  mod.rs  tui.rs
src/shell/ui/components/: component.rs  input_box.rs  mod.rs  pokemon_table.rs
src/shell/ui/pages/: list.rs  mod.rs  page.rs
tools/data/: pokedex.sql
tools/data/csv/: pokemon_stats.csv  types.csv
tools/docker/: Dockerfile
tools/sqlite3/: pokedex.sql  pokemon.db
