[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal
pokemon = { workspace = true }
string = { workspace = true }
ui-core = { workspace = true }
# External
anyhow = { workspace = true }
color-eyre = { workspace = true }
derive-crud = { workspace = true }
image = { workspace = true }
log = { workspace = true }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite" ] }
thiserror = { workspace = true }
