[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal
pokemon = { workspace = true }
string = { workspace = true }
ui-core = { workspace = true }
# External
color-eyre = { workspace = true }
derive-crud = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true }
