[package]
name = "ui-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal
pokemon = { workspace = true }
# External
cascade = { workspace = true }
color-eyre = { workspace = true }
image = { workspace = true }
num-traits = { workspace = true }
tokio = { workspace = true }
